# PPZ-Practice-1

./: .gitignore  README.md  lab2.py  lab3.py  lab4.py  lab8.conf  pyproject.toml
lab6/: Vagrantfile
source_data/: article.txt  file.csv
todo/: docker-compose.yml
todo/common/: forms.py  models.py  urls.py  views.py
todo/common/migrations/: 0001_initial.py
todo/common/templates/: task_create.html  task_list.html
todo/todo/: settings.py  urls.py
