[tool.poetry]
name = "ppz"
version = "0.6.0"
description = ""
authors = ["Stanislav Buldyhin <stanislav.buldyhin@geo-pay.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
